# dora

./: .gdbinit  .gitignore  .travis.yml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  checker.rb  dora  dora-debug  dora-rust.sublime-project  hello.dora  rust-toolchain  string_cmp.dora  test  test-release  test.dora  tester.rb
dora/: Cargo.toml  build.rs
dora-boots-compiler/: Cargo.toml
dora-boots-compiler/src/: lib.rs  serializer.rs  wire_deserializer.rs  wire_serializer.rs
dora-cannon-compiler/: Cargo.toml
dora-cannon-compiler/src/: asm.rs  codegen.rs  lib.rs  masm.rs  trait_object_thunk.rs
dora-cannon-compiler/src/masm/: arm64.rs  x64.rs
dora-compiler/: Cargo.toml
dora-compiler/src/: abi.rs  aot.rs  aot_compile.rs  assembly.rs  assembly_output.rs  boots_wire.rs  calling_convention.rs  closure.rs  cpu.rs  dora_entry_trampoline.rs  extensions.rs  impls.rs  intrinsics.rs  layout.rs  lib.rs  native_lookup.rs  reg.rs  runtime_entry_trampoline.rs  specialize.rs  trait_object_thunk.rs  wire.rs
dora-compiler/src/assembly/: coff.rs  elf.rs  macho.rs
dora-compiler/src/boots_wire/: deserializer.rs  serializer.rs
dora-compiler/src/cpu/: arm64.rs  x64.rs
dora-format/: Cargo.toml
dora-format/src/: doc.rs  lib.rs  main.rs  render.rs  test_utils.rs
dora-format/src/doc/: bin.rs  element.rs  element_list.rs  expr.rs  lit.rs  pattern.rs  print.rs  stmt.rs  ty.rs  use_.rs  utils.rs
dora-format/tests/: alt_break.in.dora  alt_break.out.dora  call_break.out.dora  format.rs  if_long_condition.out.dora  use_group_break.in.dora  use_group_break.out.dora
dora-format/tests/comments/: binary-expr-line.in.dora  binary-expr-line.out.dora  binary-expr.out.dora  class-unnamed.in.dora  class-unnamed.out.dora  element-leading.ignore.dora  element-leading.in.dora  element-leading.out.dora  stmt-leading.out.dora  struct-leading.in.dora  struct-leading.out.dora  struct-named.in.dora  struct-unnamed.in.dora  struct-unnamed.out.dora
dora-format/tests/data/: use_group.out.dora
dora-format/tests/gaps/: alias.out.dora  const.in.dora  let.in.dora  use.in.dora  use.out.dora
dora-frontend/: Cargo.toml  build.rs
dora-frontend/src/: access.rs  aliasck.rs  ast_dump.rs  bytecode.rs  clsdefck.rs  constdefck.rs  dumper.rs  element_collector.rs  element_parser.rs  enumck.rs  error.rs  exhaustive.rs  exhaustiveness.rs  expr_lowering.rs  extensiondefck.rs  fctbodyck.rs  fctdefck.rs  generator.rs  generator_tests.rs  globaldefck.rs  implck.rs  impldefck.rs  language.rs  lib.rs  parsety.rs  path.rs  program.rs  program_emitter.rs  program_parser.rs  readty.rs  returnck.rs  sema.rs  specialize.rs  stdlib.rs  stdlib_lookup.rs  structdefck.rs  sym.rs  test.rs  traitdefck.rs  ty.rs  (+7 more)
dora-frontend/src/bytecode/: builder.rs  data.rs  dumper.rs  program.rs  reader.rs  tests.rs  ty.rs  writer.rs
dora-frontend/src/error/: diag.rs  diagnostics.rs  msg.rs
dora-frontend/src/fctbodyck/: body.rs  constck.rs  lookup.rs  tests.rs
dora-frontend/src/generator/: bytecode.rs  expr.rs  function.rs  global.rs  int_dispatch.rs  pattern.rs  tests.rs
dora-frontend/src/language/: access.rs  clsdefck.rs  constdefck.rs  dumper.rs  enumck.rs  extensiondefck.rs  fctbodyck.rs  fctdefck.rs  generator.rs  generator_tests.rs  globaldefck.rs  implck.rs  impldefck.rs  program.rs  program_parser.rs  readty.rs  returnck.rs  sem_analysis.rs  sema.rs  specialize.rs  stdlib.rs  structdefck.rs  sym.rs  test.rs  traitdefck.rs  ty.rs  type_params.rs  typeparamck.rs  useck.rs
dora-frontend/src/sema/: aliases.rs  body.rs  classes.rs  consts.rs  elements.rs  enums.rs  exprs.rs  extensions.rs  fields.rs  functions.rs  globals.rs  impl_matching.rs  impls.rs  known.rs  matching.rs  modules.rs  packages.rs  patterns.rs  source_files.rs  src.rs  stmts.rs  structs.rs  traits.rs  tuples.rs  uses.rs  (+2 more)
dora-frontend/stdlib/: annotations.dora  collections.dora  io.dora  primitives.dora  rand.dora  stdlib.dora  string.dora  traits.dora
dora-language-server/: Cargo.toml
dora-language-server/src/: document_symbols.rs  formatting.rs  goto_def.rs  main.rs  position.rs  server.rs  symbols.rs  vfs.rs  workspace_symbols.rs
dora-parser/: Cargo.toml
dora-parser-derive/: Cargo.toml
dora-parser-derive/src/: lib.rs
dora-parser/src/: ast.rs  builder.rs  error.rs  green.rs  interner.rs  lexer.rs  lib.rs  main.rs  parser.rs  span.rs  syntax.rs  token.rs
dora-parser/tests/: ast_golden.rs  comments.out  simple.out
dora-runtime/: Cargo.toml
dora-runtime-macros/: Cargo.toml
dora-runtime-macros/src/: lib.rs
dora-runtime/src/: aot.rs  aot_entry.rs  boots.rs  cannon.rs  compiler.rs  constpool.rs  cpu.rs  disassembler.rs  gc.rs  handle.rs  lib.rs  masm.rs  mem.rs  mirror.rs  object.rs  os.rs  runtime.rs  safepoint.rs  shape.rs  size.rs  snapshot.rs  stack.rs  startup.rs  stdlib.rs  threads.rs  timer.rs  vm.rs  vtable.rs
dora-server/: Cargo.toml
dora-startup/: Cargo.toml
dora-startup/src/: boots.rs  lib.rs  metadata.rs
dora/src/: aot.rs  asm.rs  baseline.rs  boots.rs  bytecode.rs  cannon.rs  class.rs  compiler.rs  constpool.rs  cpu.rs  driver.rs  dseg.rs  exception.rs  execstate.rs  fctbodyck.rs  field.rs  gc.rs  handle.rs  language.rs  lib.rs  main.rs  masm.rs  mem.rs  mode.rs  module.rs  object.rs  os.rs  os_cpu.rs  pkg.rs  safepoint.rs  semck.rs  size.rs  stack.rs  stdlib.rs  sym.rs  test.rs  threads.rs  timer.rs  ty.rs  typeck.rs  (+3 more)
dora/stdlib/: Array.dora  Assert.dora  AtomicInt32.dora  AtomicInt64.dora  BitSet.dora  BitVec.dora  Bool.dora  Byte.dora  Char.dora  CodepointIterator.dora  Comparable.dora  Comparing.dora  Condition.dora  Default.dora  Double.dora  Equals.dora  Error.dora  Exception.dora  Float.dora  Float32.dora  Float64.dora  Hash.dora  HashMap.dora  HashSet.dora  Identity.dora  Int.dora  Int32.dora  Int32Range.dora  Int64.dora  IntRange.dora  Iterator.dora  Locale.dora  Long.dora  Mutex.dora  Option.dora  Queue.dora  Random.dora  Result.dora  Sizable.dora  Sortable.dora  (+28 more)
dora/stdlib-boot/: abstract.dora  open.dora  override.dora  pub.dora  static.dora
tools/pytester/: .gitignore  README.md  pyproject.toml
(+5817 files in other folders)
