[package]
name = "dora-boots-compiler"
version = "0.0.2"
authors = ["Dominik Inführ <dominik.infuehr@gmail.com>"]
description = "Boots compiler backend for the Dora programming language"
homepage = "https://github.com/dinfuehr/dora"
repository = "https://github.com/dinfuehr/dora"
license = "MIT"
edition = "2024"

[dependencies]
dora-bytecode = { path = "../dora-bytecode", version = "0.0.2" }
dora-compiler = { path = "../dora-compiler", version = "0.0.2" }
dora-runtime = { path = "../dora-runtime", version = "0.0.2", default-features = false }
dora-runtime-macros = { path = "../dora-runtime-macros", version = "0.0.1" }
