[package]
name = "dora-format"
version = "0.0.2"
homepage = "https://github.com/dinfuehr/dora"
repository = "https://github.com/dinfuehr/dora"
license = "MIT"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
dora-parser = { path = "../dora-parser", version = "0.0.2" }
smol_str = "0.2"
