[package]
name = "dora-language-server"
version = "0.0.2"
authors = ["Dominik Inführ <dominik.infuehr@gmail.com>"]
description = "The Dora programming language"
homepage = "https://github.com/dinfuehr/dora"
repository = "https://github.com/dinfuehr/dora"
license = "MIT"
edition = "2024"

[dependencies]
dora-parser = { path = "../dora-parser", version = "0.0.2" }
dora-frontend = { path = "../dora-frontend", version = "0.0.2" }
lsp-server = "*"
lsp-types = "*"
serde_json = "*"
serde = "*"
threadpool = "*"
crossbeam = "*"
walkdir = "*"
url = "*"
