[package]
name = "dora-parser-derive"
version = "0.0.1"
authors = ["Dominik Inführ <dominik.infuehr@gmail.com>"]
description = "Derive macros for dora-parser"
homepage = "https://github.com/dinfuehr/dora"
repository = "https://github.com/dinfuehr/dora"
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
