[package]
name = "dora-parser"
version = "0.0.2"
authors = ["Dominik Inführ <dominik.infuehr@gmail.com>"]
description = "The Dora programming language"
homepage = "https://github.com/dinfuehr/dora"
repository = "https://github.com/dinfuehr/dora"
license = "MIT"
edition = "2018"

[dependencies]
parking_lot = "0.6"