[package]
name = "dora-parser"
version = "0.0.2"
authors = ["Dominik Inführ <dominik.infuehr@gmail.com>"]
description = "The Dora programming language"
homepage = "https://github.com/dinfuehr/dora"
repository = "https://github.com/dinfuehr/dora"
license = "MIT"
edition = "2024"

[dependencies]
parking_lot = "*"
id-arena = "*"
dora-parser-derive = { path = "../dora-parser-derive" }
clap = { version = "4", features = ["derive"] }
