[package]
name = "dora-runtime"
version = "0.0.2"
authors = ["Dominik Inführ <dominik.infuehr@gmail.com>"]
description = "The Dora programming language"
homepage = "https://github.com/dinfuehr/dora"
repository = "https://github.com/dinfuehr/dora"
license = "MIT"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = ["capstone"]
aot = []

[dependencies]
byteorder = "*"
lazy_static = "*"
libc = "*"
capstone = { version = "*", optional = true }
dora-compiler = { path = "../dora-compiler", version = "0.0.2" }
dora-parser = { path = "../dora-parser", version = "0.0.2" }
dora-bytecode = { path = "../dora-bytecode", version = "0.0.2" }
dora-symbol = { path = "../dora-symbol", version = "0.0.1" }
dora-runtime-macros = { path = "../dora-runtime-macros", version = "0.0.1" }
threadpool = "*"
crossbeam-deque = "*"
rand = "*"
scoped_threadpool = "*"
parking_lot = "*"
fixedbitset = "*"
num_cpus = "*"
memoffset = "*"
num_enum = "*"
tempfile = "*"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60.2"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
]
