[package]
name = "dora"
version = "0.0.2"
authors = ["Dominik Inführ <dominik.infuehr@gmail.com>"]
description = "The Dora programming language"
homepage = "https://github.com/dinfuehr/dora"
repository = "https://github.com/dinfuehr/dora"
build = "build.rs"
license = "MIT"
edition = "2021"

[features]
default = ["capstone"]
aot = []

[build-dependencies]
walkdir = "2"

[dependencies]
byteorder = "*"
lazy_static = "*"
libc = "*"
capstone = { version = "*", optional = true }
dora-asm = { path = "../dora-asm", version = "0.0.1" }
dora-parser = { path = "../dora-parser", version = "0.0.2" }
threadpool = "*"
crossbeam-deque = "*"
rand = "*"
scoped_threadpool = "*"
parking_lot = "*"
fixedbitset = "*"
num_cpus = "*"
memoffset = "*"
seahash = "4.1.0"
option-ext = "0.2.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "*", features = ["memoryapi"] }

[lib]
name = "dora"
crate-type = ["lib", "staticlib"]
path = "src/lib.rs"

[[bin]]
name = "dora"
path = "src/main.rs"
