[package]
name = "dora"
version = "0.0.2"
authors = ["Dominik Inführ <dominik.infuehr@gmail.com>"]
description = "The Dora programming language"
homepage = "https://github.com/dinfuehr/dora"
repository = "https://github.com/dinfuehr/dora"
license = "MIT"
edition = "2024"

[features]
default = ["capstone"]
capstone = ["dora-runtime/capstone"]

[dependencies]
bincode = "2.0.0-rc.3"
dora-frontend = { path = "../dora-frontend", version = "0.0.2" }
dora-bytecode = { path = "../dora-bytecode", version = "0.0.2" }
dora-runtime = { path = "../dora-runtime", version = "0.0.2", default-features = false }
